# onrecord

./: Cargo.toml  LICENSE
docs/superpowers/plans/: 2026-04-08-annotations.md  2026-04-09-x11-window-fixes.md
docs/superpowers/specs/: 2026-04-08-annotations-design.md  2026-04-09-x11-window-fixes-design.md
src/: config.rs  input.rs  main.rs  overlay.rs  platform.rs  state.rs  stroke.rs  toolbar.rs
